--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-
-
 * {
   font-family: "Crimson+Text", Arial, Helvetica, sans-serif;
   color: rgb(115, 111, 111);
@@ -8,14 +6,13 @@
 .container {
   width: auto;
   height: auto;
-  background-color:rgb(207, 229, 228);
+  background-color: rgb(207, 229, 228);
   padding: 20px;
   text-align: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  
 }
 
 h1 {
@@ -25,7 +22,7 @@ h1 {
 }
 
 .form {
-  background-color: #285D70;
+  background-color: #285d70;
   width: 40%;
   height: auto;
   padding: 20px;
@@ -39,7 +36,6 @@ input {
   margin: 8px;
   border: none;
   padding: 3px;
-
 }
 
 button,
@@ -58,13 +54,11 @@ select {
 button {
   margin-top: 40px;
   cursor: pointer;
-  background-color: #2A8787;
+  background-color: #2a8787;
   margin-bottom: 20px;
   color: whitesmoke;
   font-weight: bolder;
-  
 }
-
 
 table {
   margin: 20px;
@@ -86,44 +80,69 @@ th {
   padding-top: 13px;
   padding-bottom: 13px;
   text-align: center;
-  background-color: #285D70;
+  background-color: #285d70;
   color: white;
   border: none;
 }
 
 tbody {
   color: rgb(8, 8, 8);
-  background-color:#2A8787;
+  background-color: #2a8787;
   margin: 30px;
- 
- 
 }
 
 #table {
   padding: 10px;
-   color: white;
+  color: white;
 }
 
 .deleteButton {
   cursor: pointer;
-   color: white;
+  color: white;
 }
 
 .deleteButton:hover {
- color: black;
+  color: black;
 }
 
-
-h2{
+h2 {
   margin-bottom: 0;
   font-family: "Gloock", sans-serif;
   color: #173a47;
-  
 }
 
-p{
+p {
   color: #173a47;
   font-size: 1.6rem;
   margin-top: 40px;
   font-family: "Gloock", sans-serif;
+}
+
+/* Tablets */
+@media only screen and (max-width: 1023px) {
+  .form {
+    width: 60%;
+  }
+
+  table {
+    width: 90%;
+  }
+}
+
+/* Mobile */
+@media only screen and (max-width: 767px) {
+  .form {
+    width: 80%;
+  }
+
+  table {
+    width: 100%;
+  }
+}
+
+/* Small Mobile */
+@media only screen and (max-width: 479px) {
+  .form {
+    width: 95%;
+  }
 }
