--- a/style.css
+++ b/style.css
@@ -129,17 +129,21 @@ p {
     width: 100%;
   }
 
-  input[type="date"],
-  input[type="date"]::-webkit-datetime-edit-text,
-  input[type="date"]::-webkit-datetime-edit-month-field,
-  input[type="date"]::-webkit-datetime-edit-day-field,
-  input[type="date"]::-webkit-datetime-edit-year-field {
+
+  input[type="date"] {
     width: 90%;
     height: 30px;
     margin: 8px;
     border: none;
     padding: 3px;
     font-size: 14px; 
+  }
+
+   @supports (-webkit-touch-callout: none) {
+    input[type="date"] {
+      font-size: 16px !important; /* Adjust the font size as needed */
+      padding: 10px !important;
+    }
   }
 
 }
@@ -155,20 +159,14 @@ p {
     margin: 8px;
     border: none;
     padding: 3px;
-    font-size: 14px; /* Adjust the font size as needed */
+    font-size: 14px; 
   }
 
-  input[type="date"],
-  input[type="date"]::-webkit-datetime-edit-text,
-  input[type="date"]::-webkit-datetime-edit-month-field,
-  input[type="date"]::-webkit-datetime-edit-day-field,
-  input[type="date"]::-webkit-datetime-edit-year-field {
-    width: 90%;
-    height: 30px;
-    margin: 8px;
-    border: none;
-    padding: 3px;
-    font-size: 14px; /* Adjust the font size as needed */
+    @supports (-webkit-touch-callout: none) {
+    input[type="date"] {
+      font-size: 16px !important; /* Adjust the font size as needed */
+      padding: 10px !important;
+    }
   }
 
 }
